<resources>
    <string name="app_name">HWStatistics</string>
    <string name="working_background">日志已开启</string>
    <string name="click_to_start">点击以启动日志</string>
    <string name="already_started">已经启动，请您将App退至后台</string>
    <string name="app_being_killed_reboot">日志APP下线啦！点击重启</string>
    <string name="app_battery_save_init">电量白名单初始化</string>
    <string name="app_usage_state_perm">获取应用信息白名单</string>
    <string name="app_v30_all_file_access_auth">Android_!!版本外部文件管理授权</string>
    <string name="app_request_permission">应用权限授权</string>
    <string name="app_user_register">注册用户信息</string>
    <string name="app_user_sync_time">同步时间戳</string>
    <string name="app_start_monitor">启动活动监控日志</string>
    <string name="usage_screen_on">Screen On</string>
    <string name="usage_screen_off">Screen Off</string>
    <string name="usage_user_present">User Present</string>
    <string name="usage_session">Session</string>
    <string name="usage_shut_down">Phone Shut Down</string>
    <string name="usage_un_present">User Did Not Present</string>
    <string name="permission_not_allowed">相应权限未获取成功，启动失败，请重试</string>
    <string name="err_activity_usage_record_failed">ERROR: Activity Resume Event Unfinished</string>
    <string name="usage_phone_charging">Phone Charging</string>
    <string name="usage_phone_cancel_charge">Phone Cancel Charge</string>
</resources>