<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/vBtnBatterySave"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/app_battery_save_init"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/vBtnUsageState"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/app_usage_state_perm"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/vBtnFileAccess"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/app_v30_all_file_access_auth"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/vBtnUserPermissionRequest"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/app_request_permission"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/vBtnMonitorStart"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/app_start_monitor"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>